Better Zoom, fix header on mobile

--- a/template/src/sass/components/_media.sass
+++ b/template/src/sass/components/_media.sass
@@ -370,6 +370,7 @@
 				font-size: 18px
 
 	#top-nav
+		display: none;
 		.logo-white
 			width: 95%
 			height: auto
